--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,6 @@
 <h1>About Bloccit</h1>
 <p>Created by: Me</p>
 
+<button>
 <%= link_to "Follow me!", "https://twitter.com/branblock", class: "social_btn" %>
+</button>
