--- a/app/views/sponsored_posts/edit.html.erb
+++ b/app/views/sponsored_posts/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>New Post</h1>
+<h1>Edit Sponsored Post</h1>
 <div class="row">
   <div class="col-md-4">
-    <p>Guidelines for posts</p>
+    <p>Guidelines for sponsored posts</p>
     <ul>
       <li>Make sure it rhymes.</li>
       <li>Don't use the letter "A".</li>
@@ -9,7 +9,7 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for [@topic, @post] do |f| %>
+    <%= form_for [@sponsored_post.topic, @sponsored_post] do |f| %>
       <div class="form-group">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
@@ -17,6 +17,10 @@
       <div class="form-group">
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :price %>
+        <%= f.number_field :price, rows: 1, class: 'form-control', placeholder: "Enter price" %>
       </div>
       <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
