--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,8 +3,14 @@
   <div class="row">
     <div class="col-md-8">
       <p><%= @question.body %></p>
-        <div class="check_box">Resolved? <%= check_box_tag(:resolved, 0, false) %>
+      <%= form_for @question do |f| %>
+        <div class="form-group">
+          <%= f.label :resolved, class: 'check_box' do %>
+            <%= f.check_box :resolved %> Resolved?
+        <% end %>
         </div>
+      <% end %>
+      </div>
     </div>
     <div class="col-md-4">
       <%= link_to "Edit", edit_question_path(@question), class: 'btn btn-success' %>
