--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -23,6 +23,9 @@
         <%= render partial: 'labels/form', locals: { f: f, labels: @topic.labels } %>
       </div>
       <div class="form-group">
+        <%= render partial: 'rates/form', locals: { f: f, labels: @topic.rates } %>
+      </div>
+      <div class="form-group">
         <%= f.label :public, class: 'checkbox' do %>
           <%= f.check_box :public %> Public topic
         <% end %>
