--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @topic.name %></h1>
+<p class="follow">
+<%= render partial: "rates/list", locals: { rates: @topic.rates } %>
+</p>
 <% if user_is_authorized_for_topics? %>
   <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
   <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
@@ -18,6 +21,7 @@
           <h4 class="media-heading">
             <%= link_to post.title, topic_post_path(@topic, post) %>
             <%= render partial: "labels/list", locals: { labels: post.labels } %>
+            <%= render partial: "rates/list", locals: { rates: post.rates } %>
           </h4>
           <small>
             submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
