--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,8 +20,25 @@
   </div>
 </div>
 
- <h2>Posts</h2>
- <%= render @user.posts %>
+<div>
+<% if @user.posts.count == 0 %>
+  <%= "#{@user.name} has not submitted any posts yet." %>
+<% else %>
+  <h2>Posts</h2>
+  <%= render @user.posts %>
+<% end %>
+</div>
 
- <h2>Comments</h2>
- <%= render @user.comments %>
+<div>
+<% if @user.comments.count == 0 %>
+  <%= "#{@user.name} has not submitted any comments yet." %>
+<% else %>
+  <h2>Comments</h2>
+  <%= render @user.comments %>
+<% end %>
+</div>
+
+<h2>Favorite Posts</h2>
+  <%= render @user.favorites %>
+  <%= image_tag User.avatar_url(current_user, 24), class: "gravatar" %>
+  <%= pluralize(@user.comments.count, 'comment') %>
