--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <h1>
   <%= @post.title %> <br>
   <small>
-    submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-    <%= post.comments.count %> Comments
+    submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %> <br>
+    <%= @post.comments.count %> Comments
   </small>
 </h1>
 
@@ -16,6 +16,7 @@
         <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
       <% end %>
       <% if user_is_moderator? %>
+        <%= link_to "New Post", new_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
       <% end %>
     </div>
