--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,7 +3,9 @@
 <div class="row">
   <div class="col-md-8">
     <div>
-      <%= render Topic.all %>
+      <% @topics.each do |topic| %>
+        <%= render partial: 'topic', locals: { topic: topic } %>
+      <% end %>
     </div>
   </div>
 <% if user_is_authorized_for_topics? %>
