--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,7 +6,9 @@
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
-    <%= render @topic.posts %>
+    <% @topic.posts.each do |post| %>
+      <%= render partial: 'posts/post', locals: { post: post } %>
+    <% end %>
   </div>
   <% if current_user %>
     <div class="col-md-4">
