--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,6 +21,9 @@
     <%= render partial: 'labels/form', locals: { f: f, labels: @topic.labels } %>
   </div>
   <div class="form-group">
+    <%= render partial: 'levels/form', locals: { f: f, topic: @topic, levels: @post.levels } %>
+  </div>
+  <div class="form-group">
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
 <% end %>
