--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,14 @@
 <div>
   <%= render partial: 'votes/voter', locals: { post: @post } %>
   <h1>
-    <%= @post.title %> <br>
+    <%= @post.title %>
+    <%= render partial: "levels/list", locals: { levels: @post.levels } %>
+  </h1>
+</div>
+<div>
     <small>
       submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
     </small>
-  </h1>
 </div>
 <div class="row">
   <div class="col-md-8">
