--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,11 +1,16 @@
-<h1><%= @topic.name %></h1>
+<div>
+  <h1><%= @topic.name %>
+    <%= render partial: "levels/list", locals: { levels: @topic.levels } %>
+  </h1>
+</div>
+<div>
 <% if user_is_authorized_for_topics? %>
   <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
   <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
 <% end %>
+</div>
 <div class="row">
   <div class="col-md-8">
-    <p class="lead"><%= @topic.description %></p>
 
     <p class="lead">
       <%= render partial: "labels/list", locals: { labels: @topic.labels } %>
@@ -19,6 +24,7 @@
           <h4 class="media-heading">
             <%= link_to post.title, topic_post_path(@topic, post) %>
             <%= render partial: "labels/list", locals: { labels: post.labels } %>
+            <%= render partial: "levels/list", locals: { levels: post.levels } %>
           </h4>
           <small>
             submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
