--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       </div>
     </ul>
 
+  <div class="flash">
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -43,6 +44,7 @@
         <%= flash[:notice] %>
       </div>
     <% end %>
+  </div>
 
     <%= yield %>
   </div>
