--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div>
-<% if @user.posts.count < 1 %>
+<% if user_has_no_posts(@user) %>
   <%= "#{@user.name} has not submitted any posts yet." %>
 <% else %>
   <h2>Posts</h2>
@@ -31,7 +31,7 @@
 </div>
 </br>
 <div>
-<% if @user.comments.count < 1 %>
+<% if user_has_no_comments(@user) %>
   <%= "#{@user.name} has not submitted any comments yet." %>
 <% else %>
   <h2>Comments</h2>
