correcting js issue

--- a/app/views/votes/up_vote.js.erb
+++ b/app/views/votes/up_vote.js.erb
@@ -1,1 +1,1 @@
-$('#post-' +<%= @post.id %>).html('<strong><%= @post.points %></strong>')
+$('#post-<%= @post.id %>').html('<strong>' + <%= @post.points %> + '</strong>');
